--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
+    <style>
+         .weIcon {
+            filter: drop-shadow(5px 5px 5px #222);
+            width:200px;
+            height:220px;
+        }
+    </style>
 </head>
 
 <body>
@@ -26,7 +33,7 @@
 
 
         <div class="weather-body">
-            <img src="/assets/clear.png" alt="weather Images" class="weather-img">
+            <img src="/assets/clear.png" alt="weather Images" class="weather-img weIcon">
             <div class="weather-box">
                 <p class="temp"><sup>0°C</sup></p>
                 <p class="description">Light Rain</p>
